# nbody-optimizer

./: .gitignore  CMakeLists.txt  README.md
include/: Vector3.h  particle.h
src/: main.cpp  physics.cpp
